# tt-example

./: CMakeLists.txt  build.sh
src/: CMakeLists.txt
src/add_2_integers_in_compute/: CMakeLists.txt  add_2_integers_in_compute.cpp
src/add_2_integers_in_compute/kernels/: add_2_tiles.cpp  (+2 more)
src/add_2_integers_in_riscv/: CMakeLists.txt  add_2_integers_in_riscv.cpp
src/custom_sfpi_add/: CMakeLists.txt  custom_sfpi_add.cpp
src/custom_sfpi_smoothstep/: CMakeLists.txt  custom_sfpi_smoothstep.cpp
src/data_type_sfpu/: CMakeLists.txt  data_type_sfpu.cpp
src/data_type_test/: CMakeLists.txt  data_type_test.cpp
src/eltwise_binary/: CMakeLists.txt  eltwise_binary.cpp
src/eltwise_sfpu/: CMakeLists.txt  eltwise_sfpu.cpp
src/hello_world_compute_kernel/: CMakeLists.txt  hello_world_compute_kernel.cpp
src/hello_world_data_movement/: CMakeLists.txt  hello_world_data_movement.cpp
src/loopback/: CMakeLists.txt  loopback.cpp
src/matmul_common/: bmm_op.hpp
src/matmul_multi_core/: CMakeLists.txt  matmul_multi_core.cpp
src/matmul_multicore_reuse/: CMakeLists.txt  matmul_multicore_reuse.cpp
src/matmul_single_core/: CMakeLists.txt  matmul_single_core.cpp
src/matmul_uint8/: CMakeLists.txt  matmul_uint8.cpp
src/noc_tile_transfer/: CMakeLists.txt  noc_tile_transfer.cpp
src/sfpu_barrett/: CMakeLists.txt  sfpu_barrett.cpp
src/sfpu_logic_right_shift/: CMakeLists.txt  sfpu_logic_right_shift.cpp
src/sfpu_remainder/: CMakeLists.txt  sfpu_remainder.cpp
src/sfpu_right_shift/: CMakeLists.txt  sfpu_right_shift.cpp
src/sfpu_uint32_mul/: CMakeLists.txt  sfpu_uint32_mul.cpp
(+43 files in other folders)
