add_subdirectory(loopback)
add_subdirectory(hello_world_compute_kernel)
add_subdirectory(hello_world_data_movement)
add_subdirectory(add_2_integers_in_riscv)
add_subdirectory(add_2_integers_in_compute)
add_subdirectory(eltwise_binary)
add_subdirectory(eltwise_sfpu)
add_subdirectory(matmul_single_core)
add_subdirectory(matmul_multi_core)
add_subdirectory(matmul_multicore_reuse)
add_subdirectory(custom_sfpi_add)