add_subdirectory(loopback)
add_subdirectory(hello_world_compute_kernel)
add_subdirectory(hello_world_data_movement)
add_subdirectory(add_2_integers_in_riscv)
add_subdirectory(add_2_integers_in_compute)
add_subdirectory(eltwise_binary)
add_subdirectory(eltwise_sfpu)
add_subdirectory(matmul_single_core)
add_subdirectory(matmul_multi_core)
add_subdirectory(matmul_multicore_reuse)
add_subdirectory(custom_sfpi_add)
add_subdirectory(data_type_test)
add_subdirectory(custom_sfpi_smoothstep)
add_subdirectory(data_type_sfpu)
add_subdirectory(sfpu_uint32_mul)
add_subdirectory(matmul_uint8)
add_subdirectory(sfpu_remainder)
add_subdirectory(sfpu_right_shift)
add_subdirectory(sfpu_logic_right_shift)
add_subdirectory(sfpu_barrett)